--- a/src/app/components/lista-articulos/lista-articulos.component.html
+++ b/src/app/components/lista-articulos/lista-articulos.component.html
@@ -7,8 +7,8 @@
   <!-- <vex-page-layout-header class="pb-16 flex flex-col items-start justify-center">
       <div class="w-full flex flex-col sm:flex-row justify-between">
         <div>
-          <h1 class="title mt-0 mb-1">Lista de Usuarios</h1>
-          <vex-breadcrumbs [crumbs]="['Lista de Usuarios']"></vex-breadcrumbs>
+          <h1 class="title mt-0 mb-1">Lista de Articulos</h1>
+          <vex-breadcrumbs [crumbs]="['Lista de Articulos']"></vex-breadcrumbs>
         </div>
       </div>
     </vex-page-layout-header> -->
@@ -19,7 +19,7 @@
 
         <div class="xl:w-1/12 lg:w-1/12 md:w-1/12 flex justify-center">
           <button (click)="openModal(null)" class="" color="primary" mat-mini-fab
-          matTooltip="Agregar Usuario" type="button">
+          matTooltip="Agregar Articulo" type="button">
           <mat-icon svgIcon="mat:add"></mat-icon>
         </button>
         </div>
@@ -63,30 +63,30 @@
               <mat-divider></mat-divider>
               <div class="flex justify-center items-center mb-10">
                 <div class="text-center">
-                  Nombre: {{item.nombre}}
+                  Modelo: {{item.modelo}}
                 </div>
               </div>
               <mat-divider></mat-divider>
               <div class="flex justify-center items-center mb-10">
                 <div class="text-center">
-                  Correo: {{item.correo}}
+                  Fabricante: {{item.fabricante}}
                 </div>
               </div>
               <mat-divider></mat-divider>
               <div class="flex justify-center items-center mb-10">
                 <div class="text-center">
-                  Cliente:
+                  Proveedor: {{item.proveedor}}
                 </div>
               </div>
               <mat-divider></mat-divider>
-              <div class="flex justify-between items-center mb-10">
+              <!-- <div class="flex justify-between items-center mb-10">
                 <div>
                   Cuenta:
                 </div>
                 <div>
                   Rol:
                 </div>
-              </div>
+              </div> -->
               <mat-divider></mat-divider>
               <div class="flex justify-center items-center">
                 <div class="mr-5">
@@ -97,7 +97,7 @@
                 </div>
                 <div class="mt-3.5 flex flex-col justify-center">
                   <div class="flex justify-center">
-                    <mat-slide-toggle [checked]="true" (change)="deshabilitarUsuario(item)"></mat-slide-toggle>
+                    <mat-slide-toggle [checked]="true" (change)="deshabilitarArticulo(item)"></mat-slide-toggle>
                   </div>
                   <div>
                     Deshabilitar
@@ -117,24 +117,34 @@
       <!-- TABLA -->
       <div class="py-4" [hidden]="group.value == 'cards'">
         <table [dataSource]="this.dataSourceTabla" class="w-full" mat-table matSort>
-          <ng-container matColumnDef="descripcion">
+          <ng-container matColumnDef="modelo">
             <mat-header-cell *matHeaderCellDef mat-sort-header>
-              Nombre
+              Modelo
             </mat-header-cell>
-            <mat-cell *matCellDef="let row" data-label="nombre">
+            <mat-cell *matCellDef="let row" data-label="Modelo">
               <div>
-                {{ row.nombre }}
+                {{ row.modelo }}
               </div>
             </mat-cell>
           </ng-container>
 
-          <ng-container matColumnDef="correo">
+          <ng-container matColumnDef="fabricante">
             <mat-header-cell *matHeaderCellDef mat-sort-header>
-              Correo
+                Fabricante
             </mat-header-cell>
-            <mat-cell *matCellDef="let row" data-label="correo">
+            <mat-cell *matCellDef="let row" data-label="fabricante">
               <div>
-                {{ row.correo }}
+                {{ row.fabricante }}
+              </div>
+            </mat-cell>
+          </ng-container>
+          <ng-container matColumnDef="proveedor">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>
+                Proveedor
+            </mat-header-cell>
+            <mat-cell *matCellDef="let row" data-label="proveedor">
+              <div>
+                {{ row.proveedor }}
               </div>
             </mat-cell>
           </ng-container>
@@ -145,7 +155,7 @@
             </mat-header-cell>
             <mat-cell *matCellDef="let row" data-label="Acción">
               <div class="flex justify-center">
-                <a (click)="openModal(row)" matTooltip="Editar usuario"
+                <a (click)="openModal(row)" matTooltip="Editar articulo"
                   class="w-10 h-10 leading-none flex items-center justify-center hover:bg-hover text-primary bg-primary/10 mr-2"
                   mat-icon-button>
                   <mat-icon class="icon-sm" svgIcon="mat:edit"></mat-icon>
@@ -155,7 +165,7 @@
                   mat-icon-button>
                   <mat-icon class="icon-sm" svgIcon="mat:list"></mat-icon>
                 </a>
-                <a (click)="deshabilitarUsuario(row)" matTooltip="Eliminar usuario"
+                <a (click)="deshabilitarArticulo(row)" matTooltip="Eliminar articulo"
                   class="w-10 h-10 leading-none flex items-center justify-center hover:bg-hover text-primary bg-primary/10 mr-2"
                   mat-icon-button>
                   <mat-icon class="icon-sm" svgIcon="mat:delete_forever"></mat-icon>
@@ -169,11 +179,12 @@
         </table>
         <div *ngIf="this.listaItems.length == 0" class="flex-auto items-center justify-center">
           <h1 class="m-10 headline2" style="text-align: center">
-            No se encontraron usuarios registrados
+            No se encontraron articulos registrados
           </h1>
         </div>
         <mat-paginator #paginator [pageSizeOptions]="[5, 10, 15]"></mat-paginator>
       </div>
+
     </div>
   </vex-page-layout-content>
 </vex-page-layout>
