--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,31 +41,15 @@
     vertical-align: middle
 
   }
-
   .mat-table caption {
     font-size: 1em;
   }
 
-  /*  Enable this to hide header
-  .mat-table .mat-header-cell {
-
-    border: 10px solid;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    padding: 0;
-    position: absolute;
-    width: 1px;
-  }
-  */
   .mat-table .mat-row {
     border-bottom: 5px solid #ddd;
     display: block;
   }
-  /*
-  .mat-table .mat-row:nth-child(even) {background: #CCC}
-  .mat-table .mat-row:nth-child(odd) {background: #FFF}
-  */
+
   .mat-table .mat-cell {
     border-bottom: 1px solid #ddd;
     display: block;
@@ -83,6 +67,8 @@
     content: attr(data-label);
     float: left;
     text-transform: uppercase;
+    word-break:break-all; 
+    word-wrap:break-word;
     font-weight: normal;
     //margin-right: 10%;
 
