--- a/src/app/components/lista-articulos/modal-caracteristica/modal-caracteristica.component.html
+++ b/src/app/components/lista-articulos/modal-caracteristica/modal-caracteristica.component.html
@@ -1,1 +1,47 @@
-<p>modal-caracteristica works!</p>
+<form role="form" autocomplete="off" [formGroup]="formCaracteristica" novalidate>
+  <div class="flex items-center " style="border: none !important" mat-dialog-title >
+    <h2 class="headline m-0 flex-auto">{{this.caracteristicaModel.id > 0 ? 'Editar caracteristica ' : 'Agregar caracteristica '}} <b>{{this.caracteristicaModel.caracteristicaArticulo}}</b></h2>
+    <button></button>
+    <!-- <mat-icon  svgIcon="mat:help" matTooltip="El grupo de opciones funciona como un alias o una etiqueta para una lista de opciones."></mat-icon> -->
+    <button class="text-secondary" mat-dialog-close mat-icon-button type="button">
+        <mat-icon svgIcon="mat:close"></mat-icon>
+    </button>
+  </div>
+  <mat-divider class="-mx-6 text-border"></mat-divider>
+  <mat-dialog-content class="px-1 ">
+    <div class="mt-4 flex flex-col gap-2  m-2">
+      <div class="flex flex-col sm:gap-4">
+        <mat-form-field class="flex-auto">
+          <mat-label>Característica</mat-label>
+          <!-- <mat-select formControlName="característica">
+            <mat-option *ngFor="let caracteristica of listaCaracteristicas" [value]="caracteristica.id">{{caracteristica.caracteristica}}</mat-option>
+          </mat-select> -->
+          <input type="text" matInput formControlName="caracteristica" maxlength="2000" [matAutocomplete]="auto">
+          <mat-autocomplete #auto="matAutocomplete">
+            <mat-option *ngFor="let caracteristica of filteredCaracteristicas | async" [value]="caracteristica.caracteristica" (onSelectionChange)="caracteristicaSeleccionado(caracteristica)">
+              {{caracteristica.caracteristica}}
+            </mat-option>
+          </mat-autocomplete>
+
+
+          <mat-error *ngIf="this.caracteristica_.hasError('required')"> El campo es requerido</mat-error>
+        </mat-form-field>
+        <mat-form-field class="flex-auto">
+          <mat-label>Caracteristica del artículo</mat-label>
+          <input type="text" matInput formControlName="caracteristicaArticulo" maxlength="2000">
+          <mat-error *ngIf="this.caracteristicaArticulo.hasError('required')"> El campo es requerido</mat-error>
+        </mat-form-field>
+
+
+      </div>
+    </div>
+
+  </mat-dialog-content>
+
+  <mat-dialog-actions align="end">
+    <!-- <button type="button" mat-button (click)="close(false)">Cancelar</button> -->
+    <button type="button" mat-button mat-dialog-close>Cancelar</button>
+    <button type="submit" mat-flat-button color="primary" (click)="guardarCaracteristica()" [disabled]=" formCaracteristica.invalid ">{{this.caracteristicaModel.id > 0 ? 'Editar' : 'Agregar'}}</button>
+  </mat-dialog-actions>
+
+  </form>
