--- a/src/@vex/layout/sidenav/sidenav.component.html
+++ b/src/@vex/layout/sidenav/sidenav.component.html
@@ -36,7 +36,7 @@
   </div>
 
   <vex-scrollbar class="flex-1 flex flex-col">
-    <div class="pt-6 flex-1">
+    <div class="flex-1">
       <vex-sidenav-item *ngFor="let item of items; trackBy: trackByRoute"
                         [item]="item"
                         [level]="0"></vex-sidenav-item>
