--- a/src/app/components/lista-articulos/modal-articulo/modal-articulo.component.html
+++ b/src/app/components/lista-articulos/modal-articulo/modal-articulo.component.html
@@ -12,8 +12,8 @@
 <mat-dialog-content class="px-1 ">
 
     <!-- ACCORDION -->
-    <mat-accordion class="example-headers-align">
-        <mat-expansion-panel hideToggle>
+    <mat-accordion #accordion="matAccordion" class="example-headers-align"  [multi]="true">
+        <mat-expansion-panel [expanded]="true">
             <mat-expansion-panel-header>
                 <mat-panel-title>
                     ARTICULO
@@ -102,8 +102,13 @@
                 </div>
             </form>
             <!-- TERMINA FORMULARIO ARTICULO -->
+            <div class="flex justify-end">
+              <button type="button" mat-button mat-dialog-close>Cancelar</button>
+            <button type="submit" mat-flat-button color="primary" (click)="guardarArticulo()"
+        [disabled]=" formArticulo.invalid ">{{this.articuloModel.id > 0 ? 'Editar' : 'Agregar'}}</button>
+            </div>
         </mat-expansion-panel>
-        <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+        <mat-expansion-panel [expanded]="true">
             <mat-expansion-panel-header>
                 <mat-panel-title>
                     ARTICULO
@@ -114,13 +119,13 @@
                 </mat-panel-description>
             </mat-expansion-panel-header>
             <div class="flex justify-end w-full">
-                <button class="m-4" color="primary" mat-mini-fab matTooltip="Agregar característica" type="button">
+                <button (click)="openModalCaracteristica(null)" class="m-4" color="primary" mat-mini-fab matTooltip="Agregar característica" type="button">
                     <mat-icon svgIcon="mat:add"></mat-icon>
                 </button>
             </div>
             <div class="relative shadow-md sm:rounded-lg">
-                <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
-                    <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+                <table class="w-full text-sm text-left text-gray-500 ">
+                    <thead class="text-xs text-gray-700 uppercase bg-gray-50">
                         <tr>
                             <th colspan="3" class="px-6 py-3">
                                 Características del artículo
@@ -128,9 +133,9 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+                        <tr class="bg-white border-b ">
                             <th scope="row"
-                                class="px-3 py-2 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                                class="px-3 py-2 font-medium text-gray-900 whitespace-nowrap">
                                 Apple MacBook Pro 17"
                             </th>
                             <td class="px-3 py-2">
@@ -148,7 +153,7 @@
                 </table>
             </div>
         </mat-expansion-panel>
-        <mat-expansion-panel>
+        <mat-expansion-panel [expanded]="true">
             <mat-expansion-panel-header>
                 <mat-panel-title>
                     ARTICULO
@@ -165,7 +170,7 @@
                 <div class="py-3">Valor después del 4° año: $4,320.00 - $1,440.00 = $2,880.00 </div>
             </div>
         </mat-expansion-panel>
-        <mat-expansion-panel>
+        <mat-expansion-panel [expanded]="true">
             <mat-expansion-panel-header>
                 <mat-panel-title>
                     ARTICULO
@@ -176,13 +181,13 @@
                 </mat-panel-description>
             </mat-expansion-panel-header>
             <div class="flex justify-end w-full">
-                <button class="m-4" color="primary" mat-mini-fab matTooltip="Agregar documento" type="button">
+                <button (click)="openModalDocumento(null)" class="m-4" color="primary" mat-mini-fab matTooltip="Agregar documento" type="button">
                     <mat-icon svgIcon="mat:add"></mat-icon>
                 </button>
             </div>
             <div class="relative shadow-md sm:rounded-lg">
-                <table class="w-full text-sm text-left text-gray-500 dark:text-gray-400">
-                    <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+                <table class="w-full text-sm text-left text-gray-500 ">
+                    <thead class="text-xs text-gray-700 uppercase bg-gray-50 ">
                         <tr>
                             <th colspan="2" class="px-6 py-3">
                                 Manuales y documentación
@@ -190,9 +195,9 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+                        <tr class="bg-white border-b ">
                             <th scope="row"
-                                class="px-3 py-2 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                                class="px-3 py-2 font-medium text-gray-900 whitespace-nowrap">
                                 Manual de uso
                             </th>
                             <td class="px-3 py-2">
@@ -216,7 +221,5 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
     <!-- <button type="button" mat-button (click)="close(false)">Cancelar</button> -->
-    <button type="button" mat-button mat-dialog-close>Cancelar</button>
-    <button type="submit" mat-flat-button color="primary" (click)="guardarArticulo()"
-        [disabled]=" formArticulo.invalid ">{{this.articuloModel.id > 0 ? 'Editar' : 'Agregar'}}</button>
+
 </mat-dialog-actions>
